--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="icon/favicon.ico" type="image/x-icon" />
   </head>
   <body id="top">
     <header class="s-header">
@@ -30,27 +30,26 @@
           <h3>Menú</h3>
           <ul class="header-nav__list">
             <li class="current">
-              <a class="smoothscroll" href="#home" title="home">Home</a>
+              <a class="smoothscroll" href="#inicio" title="inicio">Inicio</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#about" title="about">About</a>
-            </li>
-            <li>
-              <a class="smoothscroll" href="#services" title="services"
-                >Services</a
+              <a class="smoothscroll" href="#nosotros" title="nosotros"
+                >Nosotros</a
               >
             </li>
             <li>
-              <a class="smoothscroll" href="#works" title="works">Works</a>
-            </li>
-            <li>
-              <a class="smoothscroll" href="#clients" title="clients"
-                >Clients</a
+              <a class="smoothscroll" href="#historia" title="historia"
+                >Historia</a
               >
             </li>
             <li>
-              <a class="smoothscroll" href="#contact" title="contact"
-                >Contact</a
+              <a class="smoothscroll" href="#galeria" title="galeria"
+                >Galería</a
+              >
+            </li>
+            <li>
+              <a class="smoothscroll" href="#contacto" title="contacto"
+                >Contacto</a
               >
             </li>
           </ul>
@@ -74,7 +73,7 @@
       </a>
     </header>
     <section
-      id="home"
+      id="inicio"
       class="s-home target-section"
       data-parallax="scroll"
       data-image-src="images/hero-bg.webp"
@@ -88,17 +87,17 @@
         <div class="row home-content__main">
           <h3>¡Bienvenidos!</h3>
           <h1>
-            We are a creative group <br />
-            of people who design <br />
-            influential brands and <br />
-            digital experiences.
+            Lorem ipsum dolor sit amet, <br />
+            consectetur adipisicing elit. <br />
+            Repellendus, ratione error? <br />
+            Ipsa laborum earum.
           </h1>
           <div class="home-content__buttons">
-            <a href="#contact" class="smoothscroll btn btn--stroke">
-              Start a Project
-            </a>
             <a href="#about" class="smoothscroll btn btn--stroke">
-              More About Us
+              Conoce más
+            </a>
+            <a href="#contact" class="smoothscroll btn btn--stroke">
+              Contáctanos
             </a>
           </div>
         </div>
@@ -130,11 +129,13 @@
         </li>
       </ul>
     </section>
-    <section id="about" class="s-about">
+    <section id="nosotros" class="s-about">
       <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
-          <h3 class="subhead subhead--dark">Hello There</h3>
-          <h1 class="display-1 display-1--light">We Are Glint</h1>
+          <h3 class="subhead subhead--dark">Facultad de Agronomía</h3>
+          <h1 class="display-1 display-1--light">
+            Museo de Fitopatología de la UNC
+          </h1>
         </div>
       </div>
       <div class="row about-desc" data-aos="fade-up">
@@ -155,31 +156,21 @@
         data-aos="fade-up"
       >
         <div class="col-block stats__col">
-          <div class="stats__count">127</div>
-          <h5>Awards Received</h5>
+          <div class="stats__count">25</div>
+          <h5>Proyectos de Investigación</h5>
         </div>
         <div class="col-block stats__col">
-          <div class="stats__count">1505</div>
-          <h5>Cups of Coffee</h5>
-        </div>
-        <div class="col-block stats__col">
-          <div class="stats__count">109</div>
-          <h5>Projects Completed</h5>
-        </div>
-        <div class="col-block stats__col">
-          <div class="stats__count">102</div>
-          <h5>Happy Clients</h5>
+          <div class="stats__count">300</div>
+          <h5>Muestras de Fitopatógenos</h5>
         </div>
       </div>
       <div class="about__line"></div>
     </section>
-    <section id="services" class="s-services">
+    <section id="historia" class="s-services">
       <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
-          <h3 class="subhead">What We Do</h3>
-          <h1 class="display-2">
-            We’ve got everything you need to launch and grow your business
-          </h1>
+          <h3 class="subhead">Nuestra razón de ser</h3>
+          <h1 class="display-2">Una breve historia sobre el museo</h1>
         </div>
       </div>
       <div class="row about-desc" data-aos="fade-up">
@@ -200,18 +191,21 @@
               class="person_avatar"
             />
             <div class="person_info">
-              <span class="person_name">Satya Nadella</span>
-              <span class="person_pos">CEO, Microsoft</span>
+              <span class="person_name"
+                >Dr. Ing. Manuel Salomón <br />
+                Roncal Ordoñez</span
+              >
+              <span class="person_pos">Fundador y Docente Universitario</span>
             </div>
           </div>
-          <br>
+          <br />
         </div>
       </div>
       <div class="row services-list block-1-2 block-tab-full">
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-icon"><i class="icon-paint-brush"></i></div>
           <div class="service-text">
-            <h3 class="h2">Brand Identity</h3>
+            <h3 class="h2">Misión</h3>
             <p>
               Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit
               ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus
@@ -223,7 +217,7 @@
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-icon"><i class="icon-group"></i></div>
           <div class="service-text">
-            <h3 class="h2">Illustration</h3>
+            <h3 class="h2">Visión</h3>
             <p>
               Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit
               ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus
@@ -234,16 +228,16 @@
         </div>
       </div>
     </section>
-    <section id="works" class="s-works">
+    <section id="galeria" class="s-works">
       <div class="intro-wrap">
         <div
           class="row section-header has-bottom-sep light-sep"
           data-aos="fade-up"
         >
           <div class="col-full">
-            <h3 class="subhead">Recent Works</h3>
+            <h3 class="subhead">Galería del museo</h3>
             <h1 class="display-2 display-2--light">
-              We love what we do, check out some of our latest works
+              Mira nuestras fotografías más recientes
             </h1>
           </div>
         </div>
@@ -274,13 +268,6 @@
                   <h3 class="item-folio__title">Shutterbug</h3>
                   <p class="item-folio__cat">Branding</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -312,13 +299,6 @@
                   <h3 class="item-folio__title">Woodcraft</h3>
                   <p class="item-folio__cat">Web Design</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -350,13 +330,6 @@
                   <h3 class="item-folio__title">The Beetle</h3>
                   <p class="item-folio__cat">Web Development</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -388,13 +361,6 @@
                   <h3 class="item-folio__title">Grow Green</h3>
                   <p class="item-folio__cat">Branding</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -426,13 +392,6 @@
                   <h3 class="item-folio__title">Guitarist</h3>
                   <p class="item-folio__cat">Web Design</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -464,13 +423,6 @@
                   <h3 class="item-folio__title">Palmeira</h3>
                   <p class="item-folio__cat">Web Design</p>
                 </div>
-                <a
-                  href="https://www.behance.net/"
-                  class="item-folio__project-link"
-                  title="Project link"
-                >
-                  <i class="icon-link"></i>
-                </a>
                 <div class="item-folio__caption">
                   <p>
                     Vero molestiae sed aut natus excepturi. Et tempora numquam.
@@ -483,20 +435,20 @@
         </div>
       </div>
     </section>
-    <section id="contact" class="s-contact">
+    <section id="contacto" class="s-contact">
       <div class="overlay"></div>
       <div class="contact__line"></div>
       <div class="row section-header" data-aos="fade-up">
         <div class="col-full">
-          <h3 class="subhead">Contact Us</h3>
+          <h3 class="subhead">Contáctanos</h3>
           <h1 class="display-2 display-2--light">
-            Reach out for a new project or just say hello
+            Comunícate con nosotros para saber más acerca del museo
           </h1>
         </div>
       </div>
       <div class="row contact-content" data-aos="fade-up">
         <div class="contact-primary">
-          <h3 class="h6">Send Us A Message</h3>
+          <h3 class="h6">Envíanos un mensaje</h3>
           <form
             name="contactForm"
             id="contactForm"
@@ -510,7 +462,7 @@
                   name="contactName"
                   type="text"
                   id="contactName"
-                  placeholder="Your Name"
+                  placeholder="Nombre"
                   value=""
                   minlength="2"
                   required=""
@@ -523,7 +475,7 @@
                   name="contactEmail"
                   type="email"
                   id="contactEmail"
-                  placeholder="Your Email"
+                  placeholder="Correo"
                   value=""
                   required=""
                   aria-required="true"
@@ -535,7 +487,7 @@
                   name="contactSubject"
                   type="text"
                   id="contactSubject"
-                  placeholder="Subject"
+                  placeholder="Asunto"
                   value=""
                   class="full-width"
                 />
@@ -544,7 +496,7 @@
                 <textarea
                   name="contactMessage"
                   id="contactMessage"
-                  placeholder="Your Message"
+                  placeholder="Mensaje"
                   rows="10"
                   cols="50"
                   required=""
@@ -553,9 +505,9 @@
                 ></textarea>
               </div>
               <div class="form-field">
-                <button class="full-width btn--primary">Submit</button>
+                <button class="full-width btn--primary">Enviar Mensaje</button>
                 <div class="submit-loader">
-                  <div class="text-loader">Sending...</div>
+                  <div class="text-loader">Enviando...</div>
                   <div class="s-loader">
                     <div class="bounce1"></div>
                     <div class="bounce2"></div>
@@ -565,18 +517,16 @@
               </div>
             </fieldset>
           </form>
-          <div class="message-warning">
-            Something went wrong. Please try again.
-          </div>
+          <div class="message-warning">Algo pasó. Inténtalo de nuevo.</div>
           <div class="message-success">
-            Your message was sent, thank you!<br />
+            ¡Tu mensaje se envió correctamente!<br />
           </div>
         </div>
         <div class="contact-secondary">
           <div class="contact-info">
-            <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
+            <h3 class="h6 hide-on-fullwidth">Contacto</h3>
             <div class="cinfo">
-              <h5>Where to Find Us</h5>
+              <h5>Ubicación</h5>
               <p>
                 1600 Amphitheatre Parkway<br />
                 Mountain View, CA<br />
@@ -584,17 +534,18 @@
               </p>
             </div>
             <div class="cinfo">
-              <h5>Email Us At</h5>
+              <h5>Correo</h5>
               <p><a href="" class="__cf_email__">example@gmail.com</a><br /></p>
             </div>
             <div class="cinfo">
-              <h5>Call Us At</h5>
+              <h5>Teléfono</h5>
               <p>
                 Phone: (+63) 555 1212<br />
                 Mobile: (+63) 555 0100<br />
                 Fax: (+63) 555 0101
               </p>
             </div>
+            <h5>Redes sociales</h5>
             <ul class="contact-social">
               <li>
                 <a href="#"
@@ -620,7 +571,10 @@
       <div class="row footer-bottom">
         <div class="col-twelve">
           <div class="copyright">
-            <span>© Copyright Glint 2022</span>
+            <span
+              >Copyright &copy; <span id="year"></span> | Museo de Fitopatología
+              de la UNC</span
+            >
           </div>
           <div class="go-top">
             <a class="smoothscroll" title="Back to Top" href="#top"
@@ -698,5 +652,6 @@
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/new.js"></script>
   </body>
 </html>
