--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
             Ipsa laborum earum.
           </h1>
           <div class="home-content__buttons">
-            <a href="#about" class="smoothscroll btn btn--stroke">
+            <a href="#nosotros" class="smoothscroll btn btn--stroke">
               Conoce más
             </a>
-            <a href="#contact" class="smoothscroll btn btn--stroke">
+            <a href="#contacto" class="smoothscroll btn btn--stroke">
               Contáctanos
             </a>
           </div>
         </div>
         <div class="home-content__scroll">
-          <a href="#about" class="scroll-link smoothscroll">
+          <a href="#nosotros" class="scroll-link smoothscroll">
             <span>Explora Más</span>
           </a>
         </div>
@@ -156,10 +156,6 @@
         data-aos="fade-up"
       >
         <div class="col-block stats__col">
-          <div class="stats__count">25</div>
-          <h5>Proyectos de Investigación</h5>
-        </div>
-        <div class="col-block stats__col">
           <div class="stats__count">300</div>
           <h5>Muestras de Fitopatógenos</h5>
         </div>
@@ -203,7 +199,7 @@
       </div>
       <div class="row services-list block-1-2 block-tab-full">
         <div class="col-block service-item" data-aos="fade-up">
-          <div class="service-icon"><i class="icon-paint-brush"></i></div>
+          <div class="service-icon"><i class="icon-leaf"></i></div>
           <div class="service-text">
             <h3 class="h2">Misión</h3>
             <p>
@@ -215,7 +211,7 @@
           </div>
         </div>
         <div class="col-block service-item" data-aos="fade-up">
-          <div class="service-icon"><i class="icon-group"></i></div>
+          <div class="service-icon"><i class="icon-leaf"></i></div>
           <div class="service-text">
             <h3 class="h2">Visión</h3>
             <p>
@@ -572,7 +568,7 @@
         <div class="col-twelve">
           <div class="copyright">
             <span
-              >Copyright &copy; <span id="year"></span> | Museo de Fitopatología
+              >Copyright &copy; <span id="year"></span> Museo de Fitopatología
               de la UNC</span
             >
           </div>
