--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </a>
       </div>
       <nav class="header-nav">
-        <a href="#0" class="header-nav__close" title="close"
-          ><span>Close</span></a
+        <a href="#0" class="header-nav__close" title="Cerrar"
+          ><span>Cerrar</span></a
         >
         <div class="header-nav__content">
           <h3>Menú</h3>
@@ -53,16 +53,21 @@
               >
             </li>
           </ul>
-          <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum</p>
-          <ul class="header-nav__social">
+          <p style="color: #39b54a">
+            <i>"La agricultura es el arte de saber esperar"</i>
+          </p>
+          <ul class="contact-social">
             <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a
+                href="https://www.facebook.com/profile.php?id=100090009470443"
+                target="_blank"
+                ><i class="fa fa-facebook"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-envelope-o"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-whatsapp"></i></a>
+              <a href="mailto:mroncal@unc.edu.pe"
+                ><i class="fa fa-envelope-o"></i
+              ></a>
             </li>
           </ul>
         </div>
@@ -76,7 +81,7 @@
       id="inicio"
       class="s-home target-section"
       data-parallax="scroll"
-      data-image-src="images/hero-bg.webp"
+      data-image-src="images/background.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
@@ -87,10 +92,8 @@
         <div class="row home-content__main">
           <h3>¡Bienvenidos!</h3>
           <h1>
-            Lorem ipsum dolor sit amet, <br />
-            consectetur adipisicing elit. <br />
-            Repellendus, ratione error? <br />
-            Ipsa laborum earum.
+            Sala de Enseñanza Aprendizaje <br />
+            de la Ciencia Fitopatología Andina
           </h1>
           <div class="home-content__buttons">
             <a href="#nosotros" class="smoothscroll btn btn--stroke">
@@ -110,21 +113,17 @@
       </div>
       <ul class="home-social">
         <li>
-          <a href="#0"
+          <a
+            href="https://www.facebook.com/profile.php?id=100090009470443"
+            target="_blank"
             ><i class="fa fa-facebook" aria-hidden="true"></i
             ><span>Facebook</span></a
           >
         </li>
         <li>
-          <a href="#0"
+          <a href="mailto:mroncal@unc.edu.pe"
             ><i class="fa fa-envelope-o" aria-hidden="true"></i
             ><span>Gmail</span></a
-          >
-        </li>
-        <li>
-          <a href="#0"
-            ><i class="fa fa-whatsapp" aria-hidden="true"></i
-            ><span>WhatsApp</span></a
           >
         </li>
       </ul>
@@ -140,15 +139,19 @@
       </div>
       <div class="row about-desc" data-aos="fade-up">
         <div class="col-full">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt.
+          <p style="text-align: justify">
+            En este lugar, el futuro profesional Agrónomo, tiene a su
+            disposición el material básico que permite comprender la ciencia
+            Fitopatología. En el se pueden encontrar los siguientes elementos:
           </p>
+          <ul style="text-align: justify; margin: 0 50px">
+            <li>
+              Muestras de síntomas y signos de fitoenfermedades, conservadas en
+              líquido.
+            </li>
+            <li>Maquetas de microorganismos fungosos.</li>
+            <li>Fotografías de síntomas y signos de fitoenfermedades.</li>
+          </ul>
         </div>
       </div>
       <div
@@ -156,8 +159,16 @@
         data-aos="fade-up"
       >
         <div class="col-block stats__col">
-          <div class="stats__count">300</div>
+          <div class="stats__count">177</div>
+          <h5>Maquetas</h5>
+        </div>
+        <div class="col-block stats__col">
+          <div class="stats__count">464</div>
           <h5>Muestras de Fitopatógenos</h5>
+        </div>
+        <div class="col-block stats__col">
+          <div class="stats__count">120</div>
+          <h5>Figuras Iluminadas</h5>
         </div>
       </div>
       <div class="about__line"></div>
@@ -171,18 +182,23 @@
       </div>
       <div class="row about-desc" data-aos="fade-up">
         <div class="col-full">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt.
+          <p style="text-align: justify">
+            La Universidad y la Facultad de Agronomía implementaron el
+            Laboratorio de Fitopatología y el curso de Fitopatología, aunque fue
+            exclusivamente teórico hasta 1975. El Ingeniero Aurelio Martos Díaz
+            herborizaba síntomas y los estudiantes los exhibían en cajitas para
+            su reconocimiento, pero el material se deterioraba. En 1978, Manuel
+            Salomón Roncal Ordóñez organizó el Museo de Fitopatología con
+            material didáctico, como muestras de síntomas y signos conservados
+            en líquido, maquetas de fitopatógenos fungosos y figuras iluminadas.
+            El material didáctico es el resultado de la colaboración de
+            estudiantes voluntarios y la inversión de la universidad es mínima.
+            El ambiente ha sido visitado por científicos europeos, norte
+            americanos y nacionales.
           </p>
           <div class="person">
             <img
-              src="images/avatars/user-02.jpg"
+              src="images/dr-manuel-roncal.png"
               alt="Author image"
               class="person_avatar"
             />
@@ -203,10 +219,12 @@
           <div class="service-text">
             <h3 class="h2">Misión</h3>
             <p>
-              Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit
-              ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus
-              veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit
-              voluptas ipsa in tempora esse soluta sint.
+              La misión del Laboratorio y Museo de Fitopatología de la
+              Universidad y la Facultad de Agronomía es proporcionar a los
+              estudiantes, investigadores y público en general un ambiente de
+              aprendizaje práctico y efectivo en el reconocimiento de síntomas y
+              signos de enfermedades de plantas, así como en la identificación
+              de fitopatógenos y su manejo.
             </p>
           </div>
         </div>
@@ -215,10 +233,13 @@
           <div class="service-text">
             <h3 class="h2">Visión</h3>
             <p>
-              Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit
-              ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus
-              veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit
-              voluptas ipsa in tempora esse soluta sint.
+              Nuestra visión es ser un centro de enseñanza e investigación
+              reconocido a nivel nacional e internacional por la calidad de
+              nuestras actividades y la innovación en el manejo y control de
+              enfermedades de plantas. Además, ser reconocidos por nuestra vasta
+              colección de material didáctico, así como por nuestra capacidad
+              para generar y aplicar conocimiento en el control y prevención de
+              enfermedades de plantas
             </p>
           </div>
         </div>
@@ -245,30 +266,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-shutterbug.jpg"
+                    href="images/portfolio/2.jpg"
                     class="thumb-link"
-                    title="Shutterbug"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/lady-shutterbug.jpg"
-                      srcset="
-                        images/portfolio/lady-shutterbug.jpg    1x,
-                        images/portfolio/lady-shutterbug@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/2.jpg" alt="" />
                   </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">Shutterbug</h3>
-                  <p class="item-folio__cat">Branding</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
                 </div>
               </div>
             </div>
@@ -276,154 +279,12 @@
               <div class="item-folio">
                 <div class="item-folio__thumb">
                   <a
-                    href="images/portfolio/gallery/g-woodcraft.jpg"
+                    href="images/portfolio/3.jpg"
                     class="thumb-link"
-                    title="Woodcraft"
                     data-size="1050x700"
                   >
-                    <img
-                      src="images/portfolio/woodcraft.jpg"
-                      srcset="
-                        images/portfolio/woodcraft.jpg    1x,
-                        images/portfolio/woodcraft@2x.jpg 2x
-                      "
-                      alt=""
-                    />
+                    <img src="images/portfolio/3.jpg" alt="" />
                   </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">Woodcraft</h3>
-                  <p class="item-folio__cat">Web Design</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="masonry__brick" data-aos="fade-up">
-              <div class="item-folio">
-                <div class="item-folio__thumb">
-                  <a
-                    href="images/portfolio/gallery/g-beetle.jpg"
-                    class="thumb-link"
-                    title="The Beetle Car"
-                    data-size="1050x700"
-                  >
-                    <img
-                      src="images/portfolio/the-beetle.jpg"
-                      srcset="
-                        images/portfolio/the-beetle.jpg    1x,
-                        images/portfolio/the-beetle@2x.jpg 2x
-                      "
-                      alt=""
-                    />
-                  </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">The Beetle</h3>
-                  <p class="item-folio__cat">Web Development</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="masonry__brick" data-aos="fade-up">
-              <div class="item-folio">
-                <div class="item-folio__thumb">
-                  <a
-                    href="images/portfolio/gallery/g-grow-green.jpg"
-                    class="thumb-link"
-                    title="Grow Green"
-                    data-size="1050x700"
-                  >
-                    <img
-                      src="images/portfolio/grow-green.jpg"
-                      srcset="
-                        images/portfolio/grow-green.jpg    1x,
-                        images/portfolio/grow-green@2x.jpg 2x
-                      "
-                      alt=""
-                    />
-                  </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">Grow Green</h3>
-                  <p class="item-folio__cat">Branding</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="masonry__brick" data-aos="fade-up">
-              <div class="item-folio">
-                <div class="item-folio__thumb">
-                  <a
-                    href="images/portfolio/gallery/g-guitarist.jpg"
-                    class="thumb-link"
-                    title="Guitarist"
-                    data-size="1050x700"
-                  >
-                    <img
-                      src="images/portfolio/guitarist.jpg"
-                      srcset="
-                        images/portfolio/guitarist.jpg    1x,
-                        images/portfolio/guitarist@2x.jpg 2x
-                      "
-                      alt=""
-                    />
-                  </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">Guitarist</h3>
-                  <p class="item-folio__cat">Web Design</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="masonry__brick" data-aos="fade-up">
-              <div class="item-folio">
-                <div class="item-folio__thumb">
-                  <a
-                    href="images/portfolio/gallery/g-palmeira.jpg"
-                    class="thumb-link"
-                    title="Palmeira"
-                    data-size="1050x700"
-                  >
-                    <img
-                      src="images/portfolio/palmeira.jpg"
-                      srcset="
-                        images/portfolio/palmeira.jpg    1x,
-                        images/portfolio/palmeira@2x.jpg 2x
-                      "
-                      alt=""
-                    />
-                  </a>
-                </div>
-                <div class="item-folio__text">
-                  <h3 class="item-folio__title">Palmeira</h3>
-                  <p class="item-folio__cat">Web Design</p>
-                </div>
-                <div class="item-folio__caption">
-                  <p>
-                    Vero molestiae sed aut natus excepturi. Et tempora numquam.
-                    Temporibus iusto quo.Unde dolorem corrupti neque nisi.
-                  </p>
                 </div>
               </div>
             </div>
@@ -524,38 +385,28 @@
             <div class="cinfo">
               <h5>Ubicación</h5>
               <p>
-                1600 Amphitheatre Parkway<br />
-                Mountain View, CA<br />
-                94043 US
+                Laboratorio 2G-205<br />
+                Campus de la Universidad Nacional de Cajamarca
               </p>
             </div>
             <div class="cinfo">
               <h5>Correo</h5>
-              <p><a href="" class="__cf_email__">example@gmail.com</a><br /></p>
-            </div>
-            <div class="cinfo">
-              <h5>Teléfono</h5>
               <p>
-                Phone: (+63) 555 1212<br />
-                Mobile: (+63) 555 0100<br />
-                Fax: (+63) 555 0101
+                <a href="" class="__cf_email__">mroncal@unc.edu.pe</a><br />
               </p>
             </div>
             <h5>Redes sociales</h5>
             <ul class="contact-social">
               <li>
-                <a href="#"
+                <a
+                  href="https://www.facebook.com/profile.php?id=100090009470443"
+                  target="_blank"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
-                <a href="#"
+                <a href="mailto:mroncal@unc.edu.pe"
                   ><i class="fa fa-envelope-o" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><i class="fa fa-whatsapp" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
@@ -645,6 +496,20 @@
         </div>
       </div>
     </div>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7ZG2X6GJ95"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7ZG2X6GJ95");
+    </script>
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
